Fixed extra space issue in forget page

--- a/css/forget.css
+++ b/css/forget.css
@@ -38,6 +38,7 @@ body {
 
 .card .card-body {
     margin: 20px;
+    padding: 12px 20px 0 20px
 }
 
 
